text page spacing issues fix:

--- a/frontend/src/pages/page.scss
+++ b/frontend/src/pages/page.scss
@@ -6,14 +6,16 @@
   }
 
   &Footer {
-    padding: 0 calc(#{$frameWidth} + 15px) 0 calc(#{$frameWidth} + 15px);
+    padding: 0 calc(#{$frameWidth} + 5px) calc(#{$frameWidth} + 10px)
+      calc(#{$frameWidth} + 5px);
 
     @media (min-width: 360px) {
-      padding: 0 calc(#{$frameWidth} + 30px) 0 calc(#{$frameWidth} + 30px);
+      padding: 0 calc(#{$frameWidth} + 15px) calc(#{$frameWidth} + 15px)
+        calc(#{$frameWidth} + 15px);
     }
 
     @media (min-width: 768px) {
-      padding: 0 60px 30px 60px;
+      padding: 10px 60px 30px 60px;
     }
   }
 }
